Fix Firefox header layout problem

--- a/coursebuilder/assets/css/main.scss
+++ b/coursebuilder/assets/css/main.scss
@@ -166,7 +166,7 @@ ul#front-nav {
   background-image: linear-gradient(top,#fafafa,#f5f5f5);
   border-bottom: 1px solid #ebebeb;
   color: #91959c;
-  height: 48px;
+  height: 50px;
   padding: 17px 15px 5px;
 }
 
